@@ -1478,13 +1478,21 @@ usb_event_handle (struct usb_dev *dev)
       }
 }
 
+static void
+poll_event_intr (uint32_t *timeout, struct eventflag *ev, chopstx_intr_t *intr)
+{
+  chopstx_poll_cond_t poll_desc;
+
+  eventflag_prepare_poll (ev, &poll_desc);
+  chopstx_poll (timeout, 2, intr, &poll_desc);
+}
+
 void *
 ccid_thread (void *arg)
 {
   chopstx_intr_t interrupt;
   uint32_t timeout;
   eventmask_t m;
-  chopstx_poll_cond_t poll_desc;
   struct usb_dev dev;
 
   struct ep_in *epi = &endpoint_in;
@@ -1509,8 +1517,7 @@ ccid_thread (void *arg)
 
   while (bDeviceState != CONFIGURED)
     {
-      eventflag_prepare_poll (&c->ccid_comm, &poll_desc);
-      chopstx_poll (NULL, 2, &interrupt, &poll_desc);
+      poll_event_intr (NULL, &c->ccid_comm, &interrupt);
       if (interrupt.ready)
 	usb_event_handle (&dev);
 
@@ -1524,8 +1531,7 @@ ccid_thread (void *arg)
   ccid_notify_slot_change (c);
   while (1)
     {
-      eventflag_prepare_poll (&c->ccid_comm, &poll_desc);
-      chopstx_poll (&timeout, 2, &interrupt, &poll_desc);
+      poll_event_intr (&timeout, &c->ccid_comm, &interrupt);
       if (interrupt.ready)
 	{
 	  usb_event_handle (&dev);
